got rid of unnecessary outer div w/ class "main" and fixed overflow on body

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -1,5 +1,15 @@
 $green: #1FB682;
 
+html {
+  overflow: auto
+}
+
+body {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
 * {
   box-sizing: border-box;
   font-family: "Poppins";
@@ -7,10 +17,6 @@ $green: #1FB682;
   font-weight: 300;
   -webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-}
-
-#main {
-  overflow: hidden
 }
 
 
